--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,2 +1,14 @@
+@import 'normalize'
+@import 'variables'
+@import 'grid'
+@import 'templates/header'
+@import 'interface'
+body
+    font-family: sans-serif
+    font-size: 14px
+
+
+
+
 
 
