--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,17 @@
+@font-face {
+  font-family: 'Futura Book';
+  src: url("../fonts/FuturaBookC.woff") format("woff"), url("../fonts/FuturaBookC.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+  font-display: wrap; }
+
+@font-face {
+  font-family: 'Futura Demi';
+  src: url("../fonts/FuturaDemiC.woff") format("woff"), url("../fonts/FuturaDemiC.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+  font-display: wrap; }
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -74,6 +88,7 @@ abbr[title] {
   /* 1 */
   text-decoration: underline;
   /* 2 */
+  -webkit-text-decoration: underline dotted;
   text-decoration: underline dotted;
   /* 2 */ }
 
@@ -303,10 +318,6 @@ template {
 [hidden] {
   display: none; }
 
-.container {
-  max-width: 1256px;
-  margin: auto; }
-
 .button {
   padding: 13px 20px;
   border: none;
@@ -315,6 +326,10 @@ template {
   .button--primary {
     background-color: #E3B873;
     color: #fff; }
+
+.container {
+  max-width: 1256px;
+  margin: auto; }
 
 .header {
   background-color: #131313;
@@ -342,5 +357,5 @@ template {
   margin-right: 45px; }
 
 body {
-  font-family: sans-serif;
+  font-family: 'Futura Book', sans-serif;
   font-size: 14px; }
