--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,12 +1,13 @@
+@import 'fonts'
 @import 'normalize'
 @import 'variables'
-@import 'grid'
 @import 'interface'
+@import 'grid'
 @import 'templates/header'
 
 
 body
-    font-family: sans-serif
+    font-family: 'Futura Book', sans-serif
     font-size: 14px
 
     
