refact: fixed header position

--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -1,8 +1,9 @@
 .hero
     position: relative
+    padding-top: 100px
     background: $dark url('../img/hero-bg.jpg') no-repeat center / cover
     height: 100vh
-    color: $light
+    color: $light    
     &__instagram
         position: absolute
         left: 0
