--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -1,6 +1,11 @@
 .header
+    position: fixed
+    left: 0
+    top: 0
+    width: 100%
     background-color: $dark
     padding: 24px 0
+    z-index: 99
 .menu
     display: flex 
     justify-content: space-between
