--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -11,8 +11,11 @@
     justify-content: space-between
     align-items: center
 .logo
-    color: $primary
-    text-transform: uppercase    
+    &__link
+        text-decoration: none
+        color: $primary
+        text-transform: uppercase
+            
 .nav
     &__item
         text-decoration: none
