--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -43,6 +43,7 @@
          text-transform: uppercase
          text-decoration: none
          color: $light
+         font-family: 'Yeseva One', cursive
          &::after
              content: ''
              background: url('../img/arrow-down.svg') no-repeat center
