--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -44,6 +44,7 @@
          text-decoration: none
          color: $light
          font-family: 'Yeseva One', cursive
+         font-size: 12px
          &::after
              content: ''
              background: url('../img/arrow-down.svg') no-repeat center
