--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -78,5 +78,6 @@
     font-family: 'Yeseva One', cursive
     text-transform: uppercase
     font-size: 40px
+    font-weight: 400
     &--primary
         color: $primary
