--- a/css/style.css
+++ b/css/style.css
@@ -478,6 +478,7 @@ body {
   margin: 0;
   font-family: 'Yeseva One', cursive;
   text-transform: uppercase;
-  font-size: 40px; }
+  font-size: 40px;
+  font-weight: 400; }
   .title--primary {
     color: #E3B873; }
