--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -23,7 +23,9 @@
         font-size: 22px   
         max-width: 500px 
     &__button
-        margin-right: 20px   
+        margin-right: 20px
+        min-width: 207px 
+        height: 51px  
     &__instagram
         position: absolute
         left: 0
