--- a/css/style.css
+++ b/css/style.css
@@ -431,7 +431,7 @@ body {
   .hero__button {
     margin-right: 20px;
     min-width: 207px;
-    height: 51px; }
+    min-height: 51px; }
   .hero__instagram {
     position: absolute;
     left: 0;
