--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -25,7 +25,7 @@
     &__button
         margin-right: 20px
         min-width: 207px 
-        height: 51px  
+        min-height: 51px  
     &__instagram
         position: absolute
         left: 0
