--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -27,12 +27,10 @@
             color: $primary
 .phone
     color: $primary
-    text-decoration: none
-    &::after
-        content: ''
-        border: 1px solid $primary
-        width: 120px
-        display: flex
+    text-decoration: none        
+    border-bottom: 1px solid  $primary
+    width: 120px
+    
 
 
 .contacts
