--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -28,7 +28,7 @@
 .phone
     color: $primary
     text-decoration: none        
-    border-bottom: 1px solid  $primary
+    border-bottom: solid  $primary
     width: 120px
     
 
