--- a/css/style.css
+++ b/css/style.css
@@ -395,7 +395,7 @@ body {
 .phone {
   color: #E3B873;
   text-decoration: none;
-  border-bottom: 1px solid #E3B873;
+  border-bottom: solid #E3B873;
   width: 120px; }
 
 .contacts__phone {
