--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -28,8 +28,8 @@
 .phone
     color: $primary
     text-decoration: none        
-    border-bottom: solid  $primary
-    width: 120px
+    border-bottom: 1px solid  $primary
+    
     
 
 
