--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -20,8 +20,12 @@
         position: relative
         max-width: 47.85rem
         margin-left: 4.28rem
+    &__title
+        margin-bottom: 1rem
     &__text
-        font-size: 1.57rem   
+        font-size: 1.57rem 
+        line-height: 131%         
+        margin: 0 
         max-width: 500px 
     &__button
         margin-right: 20px
@@ -70,6 +74,7 @@
         color: $primary
         transform: rotate(90deg)
         line-height: 0.8
+        font-size: 1.1rem
         &::after
             content: ''
             width: 50px
@@ -81,6 +86,7 @@
     font-family: 'Yeseva One', cursive
     text-transform: uppercase
     font-size: 2.857rem
+    line-height: 1.3
     font-weight: 400
     &--primary
         color: $primary
