--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -12,16 +12,17 @@
     align-items: center
 .logo
     &__link
+        font-size: 1.07rem
         text-decoration: none
         color: $primary
         text-transform: uppercase
-            
+        margin-right: 5rem   
 .nav
     &__item
         text-decoration: none
         color: $light
         text-transform: uppercase
-        margin-right: 2.85rem
+        margin-right: 2.5rem
         transition: color 0.2s
         &:hover
             color: $primary
@@ -36,4 +37,6 @@
 .contacts
     &__phone
        margin-right: 45px 
+    &__button
+        font-size: 1.001rem
        
