--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -19,15 +19,16 @@
     &__content
         position: relative
         max-width: 47.85rem
-        margin-left: 4.28rem
-    &__title
-        margin-bottom: 1rem
+        margin-left: 4.28rem 
+    
     &__text
         font-size: 1.57rem 
-        line-height: 131%         
-        margin: 0 
+        line-height: 131%   
+                
         max-width: 500px 
+
     &__button
+        margin-top: 1.8rem
         margin-right: 20px
         min-width: 207px 
         min-height: 51px  
