--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,9 +1,13 @@
 @media screen and ( max-width: 1200px )
     html
-        font-size: 12px
+        font-size: 0.7rem
     .nav
         &__item
             margin-right: 1rem
+@media screen and ( min-width: 1200px )
+    html
+        font-size: 0.75rem
+    
 @media screen and ( max-width: 992px )
     .nav
         display: none
@@ -38,6 +42,11 @@
     .hero
         &__scroll-down
             display: none
+@media screen and ( max-width: 370px )
+    .logo
+        &__link
+            font-size: 0.8rem
+    
     
     
     
