--- a/css/style.css
+++ b/css/style.css
@@ -546,4 +546,6 @@ body {
 
 @media screen and (max-width: 370px) {
   .logo__link {
+    font-size: 0.8rem; }
+  .contacts__phone {
     font-size: 0.8rem; } }
