--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -46,6 +46,9 @@
     .logo
         &__link
             font-size: 0.8rem
+    .contacts
+        &__phone
+            font-size: 0.8rem
     
     
     
