--- a/css/style.css
+++ b/css/style.css
@@ -323,7 +323,7 @@ template {
   border: none;
   border-radius: 2px;
   text-transform: uppercase;
-  font-size: 0.93rem; }
+  font-size: 13px; }
   .button:hover {
     cursor: pointer; }
   .button--primary {
