--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -3,7 +3,7 @@
    border: none 
    border-radius: 2px
    text-transform: uppercase
-   font-size: 0.93rem
+   font-size: 13px
    &:hover
       cursor: pointer
    &--primary
