--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -3,7 +3,7 @@
    border: none 
    border-radius: 2px
    text-transform: uppercase
-   font-size: 13px
+   font-size: 0.93rem
    &:hover
       cursor: pointer
    &--primary
@@ -17,3 +17,8 @@
       border: 1px solid $light
       background-color: transparent
       color: $light
+.item
+   &--primary
+      color: $primary
+
+   
