--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -7,7 +7,6 @@
 @media screen and ( min-width: 1200px )
     html
         font-size: 0.75rem
-    
 @media screen and ( max-width: 992px )
     .nav
         display: none
@@ -15,7 +14,25 @@
         &__instagram
             display: none
         &__content
-            margin-left: 0    
+            margin-left: 0 
+    .card
+        &__title
+            font-size: 1rem
+@media screen and ( max-width: 760px )
+    .row
+        flex-direction: column
+        align-items: center
+    .types
+        &__card
+            margin-bottom: 5rem 
+    .card
+        &__text
+            margin-left: 0 
+    .design
+        &__paragraph
+            font-size: 1.5rem
+        &__card
+            margin-bottom: 5rem  
 @media screen and ( max-width: 570px )
     .contacts
         &__phone
@@ -38,10 +55,14 @@
             margin-bottom: 1.85rem
         &__scroll-down
             display: none
+    .design
+        &__paragraph
+            font-size: 1rem
 @media screen and ( max-height: 550px  )
     .hero
         &__scroll-down
             display: none
+    
 @media screen and ( max-width: 370px )
     .logo
         &__link
@@ -49,7 +70,6 @@
     .contacts
         &__phone
             font-size: 0.8rem
-    
     
     
     
