--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -5,11 +5,15 @@ html
 body
     font-family: 'Futura Book', sans-serif
     font-size: 1rem
+img
+    max-width: 100%
 .section
+    padding: 60px 0/** добавили временный отступ **/
     &-title
         text-align: center
         text-transform: uppercase
         font-family: 'Yeseva One', cursive
+        font-weight: 400
         &__image
             display: flex
             justify-content: center
