--- a/sass/style.sass
+++ b/sass/style.sass
@@ -7,6 +7,8 @@
 @import 'templates/header'
 @import 'templates/hero'
 @import 'templates/control'
+@import 'templates/types'
+@import 'templates/design'
 @import 'media'
 
 
