--- a/css/style.css
+++ b/css/style.css
@@ -558,11 +558,13 @@ img {
   padding: 1.214rem 3rem; }
 
 .design__paragraph {
-  max-width: 52.8rem;
-  margin: 0 auto;
+  max-width: 740px;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
   font-size: 20px;
-  margin-bottom: 2rem; }
+  line-height: 27px;
+  margin-bottom: 2.85rem; }
 
 @media screen and (max-width: 1200px) {
   html {
