--- a/sass/templates/_design.sass
+++ b/sass/templates/_design.sass
@@ -1,10 +1,12 @@
 .design
     &__paragraph
-        max-width: 52.8rem        
-        margin: 0 auto
+        max-width: 740px           
+        margin-left: auto
+        margin-right: auto
         text-align: center
         font-size: 20px
-        margin-bottom: 2rem
+        line-height: 27px
+        margin-bottom: 2.85rem
 
     
     
