--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,12 +1,17 @@
-@media screen and ( max-width: 1200px )
+@media screen and ( max-width: 1330px )
+    html
+        font-size: 0.8rem
+@media screen and ( max-width: 1215px )
     html
         font-size: 0.7rem
+    .logo
+        &__link
+            margin-right: 0.5rem
+    
+@media screen and ( max-width: 1200px )
     .nav
         &__item
             margin-right: 1rem
-@media screen and ( min-width: 1200px )
-    html
-        font-size: 0.75rem
 @media screen and ( max-width: 992px )
     .nav
         display: none
