--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -36,6 +36,7 @@
     .design
         &__paragraph
             font-size: 1.5rem
+            line-height: 20px
         &__card
             margin-bottom: 5rem  
 @media screen and ( max-width: 570px )
@@ -63,6 +64,7 @@
     .design
         &__paragraph
             font-size: 1rem
+            line-height: 15px
 @media screen and ( max-height: 550px  )
     .hero
         &__scroll-down
