--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -20,5 +20,18 @@
 .item
    &--primary
       color: $primary
-
+.label
+   font-size: 1.07rem
+   &--light
+      color: rgba($light, 0.5)
+.input
+   background-color: transparent
+   border: none
+   border-bottom: 1px solid rgba(54, 54, 54, 0.3)
+   font-size: 1.285rem
+   color: $light
+   padding: 0.5rem
+   &::placeholder
+      color: $light
+    
    
