--- a/css/style.css
+++ b/css/style.css
@@ -341,6 +341,29 @@ template {
 .item--primary {
   color: #E3B873; }
 
+.label {
+  font-size: 1.07rem; }
+  .label--light {
+    color: rgba(255, 255, 255, 0.5); }
+
+.input {
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid rgba(54, 54, 54, 0.3);
+  font-size: 1.285rem;
+  color: #fff;
+  padding: 0.5rem; }
+  .input::-webkit-input-placeholder {
+    color: #fff; }
+  .input::-moz-placeholder {
+    color: #fff; }
+  .input:-ms-input-placeholder {
+    color: #fff; }
+  .input::-ms-input-placeholder {
+    color: #fff; }
+  .input::placeholder {
+    color: #fff; }
+
 .container {
   width: 85%;
   max-width: 1256px;
@@ -566,6 +589,46 @@ img {
   line-height: 27px;
   margin-bottom: 2.85rem; }
 
+.modal {
+  position: fixed;
+  z-index: 199;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(19, 19, 19, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+  .modal__dialog {
+    position: relative;
+    max-width: 36.36rem;
+    background: #131313;
+    padding: 2.357rem 3.5rem 1.928rem;
+    color: #fff; }
+  .modal__close {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 28px;
+    height: 28px;
+    background: transparent url("../img/close.svg") no-repeat center;
+    border: none;
+    margin: 12px;
+    cursor: pointer; }
+  .modal__title {
+    font-family: 'Yeseva One', cursive;
+    font-weight: 400;
+    font-size: 1.357rem;
+    text-align: center;
+    margin: 0;
+    margin-bottom: 2.426rem; }
+  .modal__form {
+    display: flex;
+    flex-direction: column; }
+
 @media screen and (max-width: 1330px) {
   html {
     font-size: 0.8rem; } }
@@ -599,8 +662,7 @@ img {
   .card__text {
     margin-left: 0; }
   .design__paragraph {
-    font-size: 1.5rem;
-    line-height: 20px; }
+    font-size: 1.5rem; }
   .design__card {
     margin-bottom: 5rem; } }
 
@@ -625,8 +687,7 @@ img {
   .hero__scroll-down {
     display: none; }
   .design__paragraph {
-    font-size: 1rem;
-    line-height: 15px; } }
+    font-size: 1rem; } }
 
 @media screen and (max-height: 550px) {
   .hero__scroll-down {
