--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -30,8 +30,27 @@
    border-bottom: 1px solid rgba(54, 54, 54, 0.3)
    font-size: 1.285rem
    color: $light
-   padding: 0.5rem
+   padding: 0.5rem 0
    &::placeholder
+      opacity: 1
       color: $light
-    
+.policy
+   &__checkbox
+      opacity: 0
+      visibility: hidden
+      &:checked +
+         .policy__label
+            &::before
+               background: $primary url('../img/check.svg') no-repeat center / 0.8rem
+   &__label
+      display: flex
+      align-items: center
+      &::before
+         content: ''
+         width: 18px
+         height: 18px
+         border: 1px solid $primary
+         border-radius: 1px
+         margin-right: 0.64rem
+          
    
