--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -62,7 +62,8 @@
             display: none
     .design
         &__paragraph
-            font-size: 1rem
+            font-size: 15px
+            line-height: 22px
 @media screen and ( max-height: 550px  )
     .hero
         &__scroll-down
