--- a/sass/templates/_modal.sass
+++ b/sass/templates/_modal.sass
@@ -14,7 +14,7 @@
     &__dialog
         position: relative
         max-width: 36.36rem
-        background: $dark
+        background: $dark url('../img/bg-line.svg') no-repeat center
         padding: 2.357rem 3.5rem 1.928rem
         color: $light
     &__close
@@ -37,3 +37,12 @@
     &__form
         display: flex
         flex-direction: column
+    &__input
+        margin-bottom: 3.428rem
+        &:last-of-type
+            margin-bottom: 1rem
+    &__policy
+        margin-bottom: 2.7rem
+    &__button
+        align-self: flex-end
+            
