--- a/css/style.css
+++ b/css/style.css
@@ -352,17 +352,39 @@ template {
   border-bottom: 1px solid rgba(54, 54, 54, 0.3);
   font-size: 1.285rem;
   color: #fff;
-  padding: 0.5rem; }
+  padding: 0.5rem 0; }
   .input::-webkit-input-placeholder {
+    opacity: 1;
     color: #fff; }
   .input::-moz-placeholder {
+    opacity: 1;
     color: #fff; }
   .input:-ms-input-placeholder {
+    opacity: 1;
     color: #fff; }
   .input::-ms-input-placeholder {
+    opacity: 1;
     color: #fff; }
   .input::placeholder {
+    opacity: 1;
     color: #fff; }
+
+.policy__checkbox {
+  opacity: 0;
+  visibility: hidden; }
+  .policy__checkbox:checked + .policy__label::before {
+    background: #E3B873 url("../img/check.svg") no-repeat center/0.8rem; }
+
+.policy__label {
+  display: flex;
+  align-items: center; }
+  .policy__label::before {
+    content: '';
+    width: 18px;
+    height: 18px;
+    border: 1px solid #E3B873;
+    border-radius: 1px;
+    margin-right: 0.64rem; }
 
 .container {
   width: 85%;
@@ -605,7 +627,7 @@ img {
   .modal__dialog {
     position: relative;
     max-width: 36.36rem;
-    background: #131313;
+    background: #131313 url("../img/bg-line.svg") no-repeat center;
     padding: 2.357rem 3.5rem 1.928rem;
     color: #fff; }
   .modal__close {
@@ -628,6 +650,14 @@ img {
   .modal__form {
     display: flex;
     flex-direction: column; }
+  .modal__input {
+    margin-bottom: 3.428rem; }
+    .modal__input:last-of-type {
+      margin-bottom: 1rem; }
+  .modal__policy {
+    margin-bottom: 2.7rem; }
+  .modal__button {
+    align-self: flex-end; }
 
 @media screen and (max-width: 1330px) {
   html {
@@ -687,7 +717,8 @@ img {
   .hero__scroll-down {
     display: none; }
   .design__paragraph {
-    font-size: 1rem; } }
+    font-size: 15px;
+    line-height: 22px; } }
 
 @media screen and (max-height: 550px) {
   .hero__scroll-down {
