--- a/sass/templates/_modal.sass
+++ b/sass/templates/_modal.sass
@@ -31,18 +31,21 @@
         font-family: 'Yeseva One', cursive
         font-weight: 400
         font-size: 1.357rem
+        line-height: 26px
         text-align: center
         margin: 0 
-        margin-bottom: 2.426rem
+        margin-bottom: 2rem
     &__form
         display: flex
         flex-direction: column
     &__input
-        margin-bottom: 3.428rem
+        margin-bottom: 3.4rem
         &:last-of-type
-            margin-bottom: 1rem
+            margin-bottom: 0.5px
     &__policy
         margin-bottom: 2.7rem
     &__button
         align-self: flex-end
+        padding: 19px 22px
+        width: 15.2rem
             
