feat: js function for modal

--- a/css/style.css
+++ b/css/style.css
@@ -612,6 +612,8 @@ img {
   margin-bottom: 2.85rem; }
 
 .modal {
+  opacity: 0;
+  visibility: hidden;
   position: fixed;
   z-index: 199;
   left: 0;
@@ -624,6 +626,9 @@ img {
   display: flex;
   align-items: center;
   justify-content: center; }
+  .modal--visible {
+    opacity: 1;
+    visibility: visible; }
   .modal__dialog {
     position: relative;
     max-width: 36.36rem;
