--- a/css/style.css
+++ b/css/style.css
@@ -386,6 +386,21 @@ template {
     border-radius: 1px;
     margin-right: 0.64rem; }
 
+.scroll_top__link {
+  display: none;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 1000;
+  width: 2.5rem;
+  height: 2.4rem;
+  background: url("../img/control.svg") no-repeat center;
+  border: 2px solid #131313;
+  border-radius: 50%;
+  opacity: 0.5; }
+  .scroll_top__link:hover {
+    opacity: 1; }
+
 .container {
   width: 85%;
   max-width: 1256px;
