--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -52,5 +52,20 @@
          border: 1px solid $primary
          border-radius: 1px
          margin-right: 0.64rem
-          
+.scroll_top
+   &__link
+      display: none
+      position: fixed
+      bottom: 30px
+      right: 30px
+      z-index: 1000
+      width: 2.5rem
+      height: 2.4rem
+      background: url('../img/control.svg') no-repeat center
+      border: 2px solid $dark
+      border-radius: 50%
+      opacity: 0.5    
+      
+      &:hover
+         opacity: 1    
    
