--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -9,11 +9,33 @@ img
     max-width: 100%
 .section
     padding: 60px 0/** добавили временный отступ **/
+    &--dark
+        background-color: $dark
+        color: $light
     &-title
         text-align: center
-        text-transform: uppercase
-        font-family: 'Yeseva One', cursive
-        font-weight: 400
+        &--left
+            text-align: left
+        &__heading
+            text-transform: uppercase
+            font-family: 'Yeseva One', cursive
+            font-weight: 400
+            line-height: 138%
+            &--primary
+                color: $primary
+        &__word
+            display: flex
+            align-items: center
+            &::after
+                content: ''
+                width: 90px
+                height: 1px
+                background-color: $primary
+                margin-left: 2rem
+        &__text
+            font-size: 1.28rem
+            line-height: 2.07rem
+            max-width: 31.57rem
         &__image
             display: flex
             justify-content: center
