--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -9,5 +9,10 @@
 .col
     &-30
         flex-basis: 30%
-    &-50
-       width: 50%
+    &-text
+        width: 35%
+    &-image
+        width: 65%
+        
+  
+        
