--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -21,6 +21,8 @@ img
             font-family: 'Yeseva One', cursive
             font-weight: 400
             line-height: 138%
+            font-size: 27px
+            line-height: 37px
             &--primary
                 color: $primary
         &__word
@@ -35,7 +37,8 @@ img
         &__text
             font-size: 1.28rem
             line-height: 2.07rem
-            max-width: 31.57rem
+            max-width: 31.57rem            
+            margin-bottom: 3.3rem
         &__image
             display: flex
             justify-content: center
