--- a/sass/templates/_projects.sass
+++ b/sass/templates/_projects.sass
@@ -2,20 +2,34 @@
     &-slide
         display: flex
         flex-wrap: wrap
-        &__text
+        margin-bottom: 2.7rem        
+        &__text            
             flex-basis: 50%
             margin-bottom: 2.42rem
-            padding-bottom: 2rem
+            padding-bottom: 2rem  
+            margin-right: -1.8rem           
+        &--right
+            margin-left: 5rem
+            margin-top: 1.7rem                  
         &__heading
+            margin: 0
             font-size: 1.285rem
             line-height: 1.78rem
             font-family: 'Yeseva One', cursive
             font-weight: 400
             color: $primary
             text-transform: uppercase
-            margin-bottom: 0.64rem
+            margin-bottom: 7px
+            
+        &__value
+            font-size: 15px
+        
+            
     &-pagination
         &-bullet
+            width: 9.5px
+            height: 9.5px
+            
             background-color: rgba($light, 0.3)
             &-active
                 background-color: $light
@@ -35,4 +49,6 @@
             background: url('../img/arrow-next.svg') no-repeat center
 .swiper-container-horizontal>.swiper-pagination-bullets
     width: auto 
-    bottom: -2px          
+    bottom: -2px
+.swiper-container-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet
+    margin-right: 1rem
