--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,3 +1,6 @@
+@media screen and ( max-width:1410px  )
+    
+    
 @media screen and ( max-width: 1330px )
     html
         font-size: 0.8rem
@@ -7,6 +10,16 @@
     .logo
         &__link
             margin-right: 0.5rem
+    .section
+        &-title
+            &__heading
+                font-size: 1.7rem
+    .swiper
+        &-slide
+            &__heading
+                font-size: 1rem
+            &__value
+                font-size: 1rem
     
 @media screen and ( max-width: 1200px )
     .nav
@@ -37,7 +50,11 @@
         &__paragraph
             font-size: 1.5rem
         &__card
-            margin-bottom: 5rem  
+            margin-bottom: 5rem 
+    .col-50
+        width: 100% 
+        &__image
+            margin-top: 2.0625rem
 @media screen and ( max-width: 570px )
     .contacts
         &__phone
