--- a/sass/templates/_projects.sass
+++ b/sass/templates/_projects.sass
@@ -7,10 +7,8 @@
             flex-basis: 50%
             margin-bottom: 2.42rem
             padding-bottom: 2rem  
-            margin-right: -1.8rem           
-        &--right
-            margin-left: 5rem
-            margin-top: 1.7rem                  
+            margin-right: -1.8rem          
+                         
         &__heading
             margin: 0
             font-size: 1.285rem
@@ -20,11 +18,14 @@
             color: $primary
             text-transform: uppercase
             margin-bottom: 7px
-            
+       
         &__value
-            font-size: 15px
-        
-            
+            font-size: 15px       
+        &-active
+            margin: 0
+            opacity: 1
+        &-index
+            opacity: 0
     &-pagination
         &-bullet
             width: 9.5px
