--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -9,10 +9,15 @@
 .col
     &-30
         flex-basis: 30%
-    &-text
-        width: 35%
-    &-image
-        width: 65%
+    &-50
+        width: 50%  
+        &__content
+            width: 37%
+        &__image
+            width: 55%
+            
+            
+            
         
   
         
