--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -15,6 +15,7 @@
             width: 37%
         &__image
             width: 55%
+            margin-top: 1.9rem
             
             
             
