--- a/sass/templates/_projects.sass
+++ b/sass/templates/_projects.sass
@@ -24,7 +24,7 @@
         &-active
             margin: 0
             opacity: 1
-        &-index
+        &-next
             opacity: 0
     &-pagination
         &-bullet
