--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -89,10 +89,10 @@
 @media screen and ( max-width: 370px )
     .logo
         &__link
-            font-size: 1.1rem
+            font-size: 12px
     .contacts
         &__phone
-            font-size: 1.1rem
+            font-size: 12px
     
     
     
