--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -28,12 +28,12 @@
    background-color: transparent
    border: none
    border-bottom: 1px solid rgba(54, 54, 54, 0.3)
-   font-size: 1.285rem
-   color: $light
+   font-size: 1.285rem   
    padding: 0.5rem 0
-   &::placeholder
-      opacity: 1
-      color: $light
+   &--light
+      &::placeholder
+         opacity: 1
+         color: $light
 .policy
    &__checkbox
       opacity: 0
