--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -16,15 +16,22 @@ img
         text-align: center
         &--left
             text-align: left
-        &__heading
+        &--light
+            color: $light
+        &__projects
             text-transform: uppercase
             font-family: 'Yeseva One', cursive
             font-weight: 400
             line-height: 138%
             font-size: 27px
             line-height: 37px
-            &--primary
-                color: $primary
+            color: $primary            
+        &__heading
+            text-transform: uppercase
+            font-family: 'Yeseva One', cursive
+            font-weight: 400            
+            font-size: 20px
+            line-height: 28px            
         &__word
             display: flex
             align-items: center
